# pile-commander

./: README.md  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.js
.github/workflows/: release.yml
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/lib/: types.ts
src/lib/services/: folder.ts  folder_config.ts  folder_pile.ts  index.ts  navigator.ts  note.ts  widget.ts
src/lib/store/: explorer.svelte.ts  index.ts
src/lib/ui/: Appbar.svelte  Breadcrumbs.svelte  Cell.svelte  Container.svelte  Folder.svelte  FolderEditor.svelte  Note.svelte  PenCanvas.svelte  SelectedWidgetMenu.svelte  Toolbar.svelte
src/lib/ui/widgets/: 3DModel.svelte  Arrow.svelte  Audio.svelte  Circle.svelte  Folder.svelte  Image.svelte  Line.svelte  Note.svelte  Path.svelte  Rect.svelte  Text.svelte  Video.svelte
src/routes/: +page.svelte  +page.ts  Cell.svelte  Container.svelte  app.css  interactable.js  updater.ts
src/routes/old/: +page.js  app.css
src/routes/ui/: Container.svelte
src/routes/widgets/: Note.svelte
